# polynomial

./: .gitignore  .travis.yml  README.md  notes.txt  polynomial.cabal
bench/: bench.cabal
bench/src/: Bench.hs  TestData.hs
bench/src/Bench/: Bernstein.hs  Chebyshev.hs  Core.hs  Interpolation.hs  Lagrange.hs  Legendre.hs  Newton.hs  NumInstance.hs  Pretty.hs
src/Data/List/: ZipSum.hs
src/Data/VectorSpace/: WrappedNum.hs
src/Math/: Polynomial.hs
src/Math/Polynomial/: Bernoulli.hs  Bernstein.hs  Chebyshev.hs  Hermite.hs  Interpolation.hs  Lagrange.hs  Laurent.hs  Legendre.hs  Newton.hs  NumInstance.hs  Pretty.hs  Rational.hs  Type.hs  VectorSpace.hs
test/: BernsteinTests.hs  PolynomialTests.hs  TestUtils.hs  Tests.hs  test.cabal
test/Tests/: Chebyshev.hs  Core.hs  Hermite.hs  Laurent.hs
test/src/: BernsteinTests.hs  PolynomialTests.hs  TestUtils.hs  Tests.hs
test/src/Tests/: Bernstein.hs  Chebyshev.hs  Core.hs
