name:                   bench
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Test suite for polynomial package.
description:            Test suite for polynomial package.

Executable polynomial-bench
  hs-source-dirs:       src
  main-is:              Bench.hs
  build-depends:        base >= 3 && <5, 
                        containers,
                        criterion,
                        deepseq,
                        polynomial,
                        vector,
                        vector-space
