name:                   test
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <your email here>
maintainer:             James Cook <your email here>
license:                Unspecified
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Executable polynomial-tests
  ghc-options:          -threaded
  hs-source-dirs:       src
  main-is:              Tests.hs
  build-depends:        base >= 3 && <5, 
                        HUnit,
                        polynomial,
                        QuickCheck >= 2, 
                        test-framework, 
                        test-framework-hunit,
                        test-framework-quickcheck2,
                        vector-space
