name:                   test
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Test suite for polynomial package.
description:            Test suite for polynomial package.

Executable polynomial-tests
  ghc-options:          -threaded
  hs-source-dirs:       src
  main-is:              Tests.hs
  build-depends:        base >= 3 && <5, 
                        HUnit,
                        polynomial,
                        QuickCheck >= 2, 
                        test-framework, 
                        test-framework-hunit,
                        test-framework-quickcheck2,
                        vector,
                        vector-space
